src/stylesheets/vortex/dialogs.scss
.modal-dialog {
  max-width: 80%;
  min-width: 400px;
}

.modal-title {
  display: flex;
  align-items: center;

  svg {
    width: 2em;
    height: 2em;
    margin-right: 1em;
  }
  .icon-info,
  .icon-question {
    color: $brand-info;
  }

  .icon-error {
    color: $brand-danger;
  }
}

.common-dialog-regular {
  .modal-dialog {
    width: 60em;
  }
}

.common-dialog-wide {
  .modal-dialog {
    height: 80%;
    width: auto;
  }

  .modal-content {
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
  }

  .modal-body {
    flex: 1 0%;
    display: flex;
    padding: $half-gutter $gutter-width;

    div {
      display: flex;
      flex-direction: column;
    }

    webview {
      height: 100%;
      background-color: white;
    }
  }
}

.dialog-container {
  width: 100%;
  min-height: 300px;
  max-height: 60vh;
  overflow-y: auto;
  display: flex;
  flex-direction: column;

  // the flex sizing may not be optimal
  textarea {
   width: 100%;
   resize: none;
   border: none;
   flex: 1 1 0%;
  }

  > div {
   flex: 1 1 90%;
  }

  .dialog-content-input {
    display: flex;
    > div {
      flex: 1 1 0;
      display: flex;
    }
  }

  > .dialog-content-text {
    flex: initial;
    margin-bottom: $half-gutter;
    white-space: pre-wrap;
  }

  > .dialog-content-bbcode {
    table {
      width: 100%;
    }
    ul {
      margin-bottom: 0;
    }
  }

  > .dialog-content-html {
    white-space: pre-wrap;
  }

  > .dialog-content-choices {
    flex: 1 1 0;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    > div {
      overflow: auto;
    }
  }
}

